# vk-poster

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  README_ru.md  fly.toml  package-lock.json  package.json  tsconfig.json
locales/en/: translation.json
locales/ru/: translation.json
migrations/: 0001_init.sql
src/: commands.rs  error-handler.ts  event_handler.rs  index.ts  logger.ts  main.rs  scheduler.ts  utils.rs
src/api/: message.ts
src/commands/: addButton.ts  addComponent.ts  balance.ts  balanceSet.ts  balanceTop.ts  cleanUpCommands.ts  commandRemove.ts  config.ts  expConfig.ts  give.ts  hello.rs  leaderboard.ts  mod.rs  ping.rs  ping.ts  poll.ts  rank.ts  register.rs  reward.ts  sendMessage.ts  sendmsg.ts  set.ts  setup.rs  shop.ts  welcome.rs
src/interaction-handlers/: optionsButton.ts  rentButton.ts  shopButton.ts  shopSelect.ts
src/listeners/: guildMemberAdd.ts  guildMemberAvailable.ts  guildMemberUpdate.ts  messageCreate.ts  messageUpdate.ts  ready.ts  voiceStateUpdate.ts
src/messages/: info.json  invite.json  levels.json  roles.json  rules.json  shop.json  sponsor.json
src/models/: message.ts
src/routes/: api.ts
src/schemas/: Guild.ts  Member.ts  Message.ts  RoleReward.ts  ShopItem.ts
src/services/: mongo.service.ts
src/types/: discord.d.ts  env.d.ts  message.ts  sapphire.d.ts
