[package]
name = "stella"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
poise = "0.6.1"
shuttle-runtime = "0.51.0"
shuttle-serenity = "0.51.0"
shuttle-shared-db = { version = "0.51.0", features = ["postgres", "sqlx"] }
tracing = "0.1.37"
tokio = "1.26.0"
sqlx = { version = "0.8.3", features = [ "runtime-tokio-rustls" ] }
rand = "0.8.5"
